Functionality more similar to the Flutter app's

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -33,6 +33,12 @@
             android:label="Prime Number Calculator"
             android:parentActivityName=".MainActivity"
             android:exported="false" />
+
+        <activity
+            android:name=".LocationActivity"
+            android:label="Location Page"
+            android:parentActivityName=".MainActivity"
+            android:exported="false" />
     </application>
 
 </manifest>
