--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -8,6 +8,8 @@
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
     <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
 
+    <!-- For REST API http internet permissions -->
+    <uses-permission android:name="android.permission.INTERNET" />
 
     <application
         android:allowBackup="true"
@@ -29,8 +31,8 @@
         </activity>
 
         <activity
-            android:name=".PrimeNumberActivity"
-            android:label="Prime Number Calculator"
+            android:name=".RestGetActivity"
+            android:label="REST GET Page"
             android:parentActivityName=".MainActivity"
             android:exported="false" />
 
